--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -629,7 +629,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "btc-ts",
    "language": "python",
    "name": "python3"
   },
@@ -643,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
